feat: more progress