@@ -7,15 +7,7 @@ import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.Spliterator;
+import java.util.*;
 import java.util.function.Function;
 
 /**
@@ -58,7 +50,7 @@ public class MappedKeyedTag<T> implements Iterable<T> {
 		if (calculatedValues != null)
 			return calculatedValues;
 		tag.getKeys().forEach(this::map);
-		return calculatedValues = Collections.unmodifiableSet(new HashSet<>(keyMap.values()));
+		return calculatedValues = Set.copyOf(keyMap.values());
 	}
 
 	@NotNull
